--- a/fe/package.json
+++ b/fe/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.3.2",
     "material-react-toastify": "1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
