--- a/fe/package.json
+++ b/fe/package.json
@@ -15,19 +15,15 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.4.4",
-    "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.2.7",
-    "@mui/styles": "^5.2.3",
     "axios": "^1.3.2",
     "material-react-toastify": "1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.0",
-    "tss-react": "^4.4.4"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
