--- a/fe/package.json
+++ b/fe/package.json
@@ -20,6 +20,7 @@
     "material-react-toastify": "1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.0"
   },
