--- a/fe/package.json
+++ b/fe/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.2",
     "material-react-toastify": "1.0.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
