--- a/fe/package.json
+++ b/fe/package.json
@@ -17,11 +17,13 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.2.7",
     "axios": "^1.3.2",
+    "i18next": "^22.4.9",
     "material-react-toastify": "1.0.1",
     "preval.macro": "^5.0.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.0"
