--- a/fe/package.json
+++ b/fe/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.2.7",
     "axios": "^1.3.2",
     "material-react-toastify": "1.0.1",
+    "preval.macro": "^5.0.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
+    "@types/preval.macro": "^3.0.0",
     "@types/react": "^18.0.27",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.10",
