--- a/.github/workflows/data-upload.yaml
+++ b/.github/workflows/data-upload.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
+          aws-region: eu-central-1
 
       - uses: actions/setup-python@v4
         with:
@@ -30,4 +30,4 @@ jobs:
       - run: cp to_upload/latest.json "to_upload/`date +%Y-%m-%d_%H-%M-%S`.json"
 
       - name: Sync JSON files
-        run: aws s3 sync ./to_upload/* s3://afetyardim-data
+        run: aws s3 sync ./to_upload/* s3://cdn.afetbilgi.com
