--- a/.github/workflows/data-upload.yaml
+++ b/.github/workflows/data-upload.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - feat/pipeline-refactor
 
 jobs:
   deploy:
@@ -20,8 +21,8 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
-          cache: 'pip' # caching pip dependencies
+          python-version: "3.9"
+          cache: "pip" # caching pip dependencies
 
       - run: pip install -r requirements.txt
       - run: cd data
