--- a/.github/workflows/data-upload.yaml
+++ b/.github/workflows/data-upload.yaml
@@ -25,10 +25,8 @@ jobs:
           cache: "pip" # caching pip dependencies
 
       - run: pip install -r requirements.txt
-      - run: cd data
-      - run: mkdir to_upload
-      - run: python combine.py > to_upload/latest.json
-      - run: cp to_upload/latest.json "to_upload/`date +%Y-%m-%d_%H-%M-%S`.json"
+
+      - run: cd data && mkdir to_upload &6 python combine.py > to_upload/latest.json &&  cp to_upload/latest.json "to_upload/`date +%Y-%m-%d_%H-%M-%S`.json"
 
       - name: Sync JSON files
-        run: aws s3 sync ./to_upload/* s3://cdn.afetbilgi.com
+        run: aws s3 sync ./data/to_upload/* s3://cdn.afetbilgi.com
