--- a/.github/workflows/data-upload.yaml
+++ b/.github/workflows/data-upload.yaml
@@ -29,4 +29,4 @@ jobs:
       - run: cd data && mkdir to_upload && python combine.py > to_upload/latest.json && cp to_upload/latest.json "to_upload/`date +%Y-%m-%d_%H-%M-%S`.json"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/* s3://cdn.afetbilgi.com
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
