Change git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,8 @@ dist
 # production
 /build
 
+/pdfConverterAPI.pdf
+
 # misc
 .DS_Store
 .env.local
@@ -132,3 +134,5 @@ yarn-error.log*
 !deploy/charts/*tgz
 .local
 .render
+
+*.pdf
