--- a/pdfConverterAPI/package.json
+++ b/pdfConverterAPI/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jspdf": "^2.5.1"
+    "jspdf": "^2.5.1",
+    "moment": "^2.29.4"
   }
 }
