--- a/pdfConverterAPI/package.json
+++ b/pdfConverterAPI/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jspdf": "^2.5.1",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "slugify": "^1.6.5"
   }
 }
