--- a/.github/workflows/data-upload.yaml
+++ b/.github/workflows/data-upload.yaml
@@ -49,8 +49,7 @@ jobs:
       - name: Merge datasets
         run: |
           python combine.py ./latest_datasets > to_upload/latest.json
-          cp to_upload/latest.json "to_upload/`date +%Y-%m-%d_%H-%M-%S`.json"
+          gzip -9 -c to_upload/latest.json > "to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        # TODO: Replace s3://cdn.afetbilgi.com/sazak-cron-test with s3://cdn.afetbilgi.com
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/sazak-cron-test
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
