--- a/.github/workflows/data-upload.yaml
+++ b/.github/workflows/data-upload.yaml
@@ -52,4 +52,5 @@ jobs:
           gzip -9 -c to_upload/latest.json > "to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
+        # TODO: Change s3://cdn.afetbilgi.com/sazak-test-data to s3://cdn.afetbilgi.com
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/sazak-test-data
