--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -3,7 +3,7 @@ name: Data upload (cronjob)
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/10 * * * *' # Run every 10 minutes
+    - cron:  '*/5 * * * *' # Run every 5 minutes
 
 jobs:
   deploy:
@@ -33,18 +33,23 @@ jobs:
 
       - name: Run parsers
         run: |
-          python ./parsers/barinma_parser.py > ./latest_datasets/barinma.json
           python ./parsers/toplanma_parser.py > ./latest_datasets/toplanma.json
-          python ./parsers/yemek_parser.py > ./latest_datasets/yemek.json
-          python ./parsers/telefonnumaralari_parser.py > ./latest_datasets/telefon.json
           python ./parsers/faydalilinkler_parser.py > ./latest_datasets/faydali_linkler.json
           python ./parsers/veteriner_parser.py > ./latest_datasets/veteriner.json
           python ./parsers/yazilar_parser.py > ./latest_datasets/yazilar.json
+
+          # python ./parsers/barinma_parser.py > ./latest_datasets/barinma.json
+          # python ./parsers/yemek_parser.py > ./latest_datasets/yemek.json
+          # python ./parsers/telefonnumaralari_parser.py > ./latest_datasets/telefon.json
+          cp ./datasets/barinma.json ./latest_datasets/barinma.json
+          cp ./datasets/yemek.json ./latest_datasets/yemek.json
+          cp ./datasets/barinma.json ./latest_datasets/barinma.json
 
           cp ./datasets/yardim_toplama_merkezleri.json ./latest_datasets/yardim_toplama_merkezleri.json          
           cp ./datasets/kokhucre.json ./latest_datasets/kokhucre.json
           cp ./datasets/blood.json ./latest_datasets/blood.json
           cp ./datasets/vpn.json ./latest_datasets/vpn.json
+          cp ./datasets/twitter_account.json ./latest_datasets/twitter_account.json
 
       - name: Merge datasets
         run: |
