--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -2,10 +2,11 @@ name: Data upload (cronjob)
 
 on:
   workflow_dispatch:
+  push:
 
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/2 * * * *' # Run every 10 minutes
+    - cron:  '*/10 * * * *' # Run every 10 minutes
 
 jobs:
   deploy:
