--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -46,7 +46,7 @@ jobs:
           python ./barinma_parser.py
           python ./yemek_parser.py
           python ./telefonnumaralari_parser.py
-          
+
           cp ../datasets/barinma.json ../latest_datasets/barinma.json
           cp ../datasets/yemek.json ../latest_datasets/yemek.json
           cp ../datasets/barinma.json ../latest_datasets/barinma.json
@@ -58,6 +58,7 @@ jobs:
           cp ../datasets/toplanma.json ../latest_datasets/toplanma.json
           cp ../datasets/telefon.json ../latest_datasets/telefon.json
           cp ../datasets/faydali_linkler.json ../latest_datasets/faydali_linkler.json
+          cp ../datasets/veteriner.json ../latest_datasets/veteriner.json
 
       - name: Merge datasets
         run: |
