--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -67,5 +67,4 @@ jobs:
           gzip -9 -c ./data/to_upload/latest.json > "./data/to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        # TODO: Change s3://cdn.afetbilgi.com/sazak-test-data to s3://cdn.afetbilgi.com
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/sazak-test-data
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/
