--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -72,5 +72,4 @@ jobs:
           gzip -9 -c ./data/to_upload/latest.json > "./data/to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        # TODO: Change to s3://cdn.afetbilgi.com
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/sazak
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
