--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -46,6 +46,8 @@ jobs:
           python ./yemek_parser.py
           python ./telefonnumaralari_parser.py
 
+          python ./eczane.py ../latest_datasets/eczane.json
+
           cp ../datasets/barinma.json ../latest_datasets/barinma.json
           cp ../datasets/yemek.json ../latest_datasets/yemek.json
           cp ../datasets/barinma.json ../latest_datasets/barinma.json
@@ -66,4 +68,4 @@ jobs:
           gzip -9 -c ./data/to_upload/latest.json > "./data/to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
