--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -40,7 +40,7 @@ jobs:
           python ./faydalilinkler_parser.py
           python ./veteriner_parser.py
           python ./yazilar_parser.py
-          python ./blood_parser.py
+          python ./blood.py ../latest_datasets/blood.json
 
           python ./barinma.py ../latest_datasets/barinma.json
           python ./yemek_parser.py
@@ -52,7 +52,6 @@ jobs:
           cp ../datasets/barinma.json ../latest_datasets/barinma.json
           cp ../datasets/yardim_toplama_merkezleri.json ../latest_datasets/yardim_toplama_merkezleri.json
           cp ../datasets/kokhucre.json ../latest_datasets/kokhucre.json
-          cp ../datasets/blood.json ../latest_datasets/blood.json
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/twitter_account.json ../latest_datasets/twitter_account.json
           cp ../datasets/toplanma.json ../latest_datasets/toplanma.json
