--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -41,6 +41,7 @@ jobs:
           python ./veteriner_parser.py
           python ./yazilar_parser.py
           python ./blood.py ../latest_datasets/blood.json
+          python ./kokhucre.py ../latest_datasets/kokhucre.json
 
           python ./barinma.py ../latest_datasets/barinma.json
           python ./yemek_parser.py
@@ -51,7 +52,6 @@ jobs:
           cp ../datasets/yemek.json ../latest_datasets/yemek.json
           cp ../datasets/barinma.json ../latest_datasets/barinma.json
           cp ../datasets/yardim_toplama_merkezleri.json ../latest_datasets/yardim_toplama_merkezleri.json
-          cp ../datasets/kokhucre.json ../latest_datasets/kokhucre.json
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/twitter_account.json ../latest_datasets/twitter_account.json
           cp ../datasets/toplanma.json ../latest_datasets/toplanma.json
