--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -37,17 +37,16 @@ jobs:
           cd parsers
 
           python ./toplanma_parser.py
-          python ./faydalilinkler.py ../latest_datasets/faydali_linkler.json
           python ./veteriner_parser.py
           python ./yazilar_parser.py
-          python ./blood.py ../latest_datasets/blood.json
-          python ./kokhucre.py ../latest_datasets/kokhucre.json
+          python ./yemek_parser.py
 
           python ./barinma.py ../latest_datasets/barinma.json
-          python ./yemek_parser.py
-          python ./telefonnumaralari_parser.py
-
+          python ./blood.py ../latest_datasets/blood.json
+          python ./kokhucre.py ../latest_datasets/kokhucre.json
+          python ./telefonnumaralari.py ../latest_datasets/telefon.json
           python ./eczane.py ../latest_datasets/eczane.json
+          python ./faydalilinkler.py ../latest_datasets/faydali_linkler.json
 
           cp ../datasets/yemek.json ../latest_datasets/yemek.json
           cp ../datasets/barinma.json ../latest_datasets/barinma.json
@@ -55,7 +54,6 @@ jobs:
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/twitter_account.json ../latest_datasets/twitter_account.json
           cp ../datasets/toplanma.json ../latest_datasets/toplanma.json
-          cp ../datasets/telefon.json ../latest_datasets/telefon.json
           cp ../datasets/veteriner.json ../latest_datasets/veteriner.json
           cp ../datasets/yazilar.json ../latest_datasets/yazilar.json
 
