--- a/pdfConverterAPI/leafGenerator/package.json
+++ b/pdfConverterAPI/leafGenerator/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
+    "pdf-merge": "^1.2.0",
     "slugify": "^1.6.5"
   }
 }
