--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -5,7 +5,7 @@ on:
 
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron: "*/30 * * * *" # Run every 10 minutes
+    - cron: "*/30 * * * *" # Run every 30 minutes
 
 jobs:
   deploy:
@@ -36,31 +36,20 @@ jobs:
 
           cd parsers
 
-          python ./toplanma_parser.py
-          python ./faydalilinkler_parser.py
-          python ./veteriner_parser.py
-          python ./yazilar_parser.py
-          python ./blood_parser.py
-
-          python ./barinma_parser.py
-          python ./yemek_parser.py
-          python ./telefonnumaralari_parser.py
-
+          python ./yemek.py ../latest_datasets/yemek.json
+          python ./yazilar.py ../latest_datasets/yazilar.json
+          python ./toplanma.py ../latest_datasets/toplanma.json
+          python ./barinma.py ../latest_datasets/barinma.json
+          python ./blood.py ../latest_datasets/blood.json
+          python ./kokhucre.py ../latest_datasets/kokhucre.json
+          python ./telefonnumaralari.py ../latest_datasets/telefon.json
           python ./eczane.py ../latest_datasets/eczane.json
+          python ./faydalilinkler.py ../latest_datasets/faydali_linkler.json
+          python ./veteriner.py ../latest_datasets/veteriner.json
+          python ./yardim_toplama_merkezleri.py ../latest_datasets/yardim_toplama_merkezleri.json
 
-          cp ../datasets/barinma.json ../latest_datasets/barinma.json
-          cp ../datasets/yemek.json ../latest_datasets/yemek.json
-          cp ../datasets/barinma.json ../latest_datasets/barinma.json
-          cp ../datasets/yardim_toplama_merkezleri.json ../latest_datasets/yardim_toplama_merkezleri.json
-          cp ../datasets/kokhucre.json ../latest_datasets/kokhucre.json
-          cp ../datasets/blood.json ../latest_datasets/blood.json
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/twitter_account.json ../latest_datasets/twitter_account.json
-          cp ../datasets/toplanma.json ../latest_datasets/toplanma.json
-          cp ../datasets/telefon.json ../latest_datasets/telefon.json
-          cp ../datasets/faydali_linkler.json ../latest_datasets/faydali_linkler.json
-          cp ../datasets/veteriner.json ../latest_datasets/veteriner.json
-          cp ../datasets/yazilar.json ../latest_datasets/yazilar.json
 
       - name: Merge datasets
         run: |
