--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-pandas
+autopep8==2.0.1
+numpy==1.24.2
+pandas==1.5.3
+pycodestyle==2.10.0
+PyPDF2==3.0.1
+python-dateutil==2.8.2
+pytz==2022.7.1
+six==1.16.0
+tomli==2.0.1
+typing_extensions==4.4.0
