Depremden Etkilenen Şehirler Ve Hepsinin Olduğu PDF'i Üreten API v2 (#53)

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,7 @@ dist
 # production
 /build
 
+
 # misc
 .DS_Store
 .env.local
@@ -132,3 +133,5 @@ yarn-error.log*
 !deploy/charts/*tgz
 .local
 .render
+
+**/*.pdf
