--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -13,6 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Checking HTTP status codes are valid
+        uses: lakuapik/gh-actions-http-status@v1
+        with:
+          sites: '["https://afetbilgi.com", "https://www.afetbilgi.com"]'
+          expected: '[301, 200]'
+          
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
