Invalid cron value fixed

--- a/.github/workflows/pdf-generate-upload.yaml
+++ b/.github/workflows/pdf-generate-upload.yaml
@@ -5,7 +5,7 @@ on:
 
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron: "*/60 * * * *" # Run every hour
+    - cron: "0 * * * *" # Run every hour
 
 jobs:
   deploy:
