--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -1,6 +1,10 @@
 name: Data upload (cronjob)
 
 on:
+  push:
+    branches:
+      - ozansz/blood-redirect
+
   workflow_dispatch:
 
   schedule:
@@ -40,7 +44,6 @@ jobs:
           python ./yazilar.py ../latest_datasets/yazilar.json
           python ./toplanma.py ../latest_datasets/toplanma.json
           python ./barinma.py ../latest_datasets/barinma.json
-          python ./blood.py ../latest_datasets/blood.json
           python ./kokhucre.py ../latest_datasets/kokhucre.json
           python ./telefonnumaralari.py ../latest_datasets/telefon.json
           python ./eczane.py ../latest_datasets/eczane.json
@@ -50,6 +53,7 @@ jobs:
 
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/twitter_account.json ../latest_datasets/twitter_account.json
+          cp ../datasets/blood.json ../latest_datasets/blood.json
 
       - name: Merge datasets
         run: |
@@ -57,4 +61,4 @@ jobs:
           gzip -9 -c ./data/to_upload/latest.json > "./data/to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/sazak-blood # // TODO:CHANGE
