--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -40,7 +40,6 @@ jobs:
           python ./yazilar.py ../latest_datasets/yazilar.json
           python ./toplanma.py ../latest_datasets/toplanma.json
           python ./barinma.py ../latest_datasets/barinma.json
-          python ./blood.py ../latest_datasets/blood.json
           python ./kokhucre.py ../latest_datasets/kokhucre.json
           python ./telefonnumaralari.py ../latest_datasets/telefon.json
           python ./eczane.py ../latest_datasets/eczane.json
@@ -50,6 +49,7 @@ jobs:
 
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/twitter_account.json ../latest_datasets/twitter_account.json
+          cp ../datasets/blood.json ../latest_datasets/blood.json
 
       - name: Merge datasets
         run: |
