--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -2,6 +2,9 @@ name: Data upload (cronjob)
 
 on:
   workflow_dispatch:
+  push:
+    branch:
+      - ayberk/feature
 
   schedule:
     # * is a special character in YAML so you have to quote this string
@@ -46,6 +49,7 @@ jobs:
           python ./faydalilinkler.py ../latest_datasets/faydali_linkler.json
           python ./veteriner.py ../latest_datasets/veteriner.json
           python ./yardim_toplama_merkezleri.py ../latest_datasets/yardim_toplama_merkezleri.json
+          python ./tahliye_parser.py ../latest_datasets/tahliye.json
 
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/twitter_account.json ../latest_datasets/twitter_account.json
@@ -57,4 +61,4 @@ jobs:
           gzip -9 -c ./data/to_upload/latest.json > "./data/to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/ayberk
