--- a/maps/package.json
+++ b/maps/package.json
@@ -28,7 +28,8 @@
     "react-leaflet": "^4.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.0",
