--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -1,6 +1,9 @@
 name: Data upload (cronjob)
 
 on:
+  push:
+    branches:
+      - 'ayberk/feature'
   workflow_dispatch:
 
   schedule:
@@ -58,4 +61,4 @@ jobs:
           gzip -9 -c ./data/to_upload/latest.json > "./data/to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/ayberk
