--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -48,6 +48,7 @@ jobs:
           python ./yardim_toplama_merkezleri.py ../latest_datasets/yardim_toplama_merkezleri.json
           python ./tahliye_parser.py ../latest_datasets/tahliye.json
           python ./ulasim_parser.py ../latest_datasets/ulasim.json
+          python ./hastane.py ../latest_datasets/hastane.json
 
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/twitter_account.json ../latest_datasets/twitter_account.json
