--- a/maps/package.json
+++ b/maps/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.2.7",
+    "@mui/system": "^5.11.8",
     "axios": "^1.3.2",
     "i18next": "^22.4.9",
     "leaflet": "^1.9.3",
