--- a/.github/workflows/pdf-generate-upload-markdown.yaml
+++ b/.github/workflows/pdf-generate-upload-markdown.yaml
@@ -39,4 +39,4 @@ jobs:
           ./pdf-markdown/generate.sh
 
       - name: Sync PDFs
-        run: aws s3 sync md-generated/. s3://cdn.afetbilgi.com/md-pdf
+        run: aws s3 sync md-generated/. s3://cdn.afetbilgi.com/md-pdf/TEST
