--- a/.github/workflows/pdf-generate-upload-markdown.yaml
+++ b/.github/workflows/pdf-generate-upload-markdown.yaml
@@ -1,14 +1,10 @@
 name: PDF upload with Markdown (cronjob)
 
 on:
-  push:
-    branches:
-      - ozansz/pdf-by-cities
-
   workflow_dispatch:
 
   schedule:
-    - cron: "*/30 * * * *"
+    - cron: "32 * * * *"
 
 jobs:
   deploy:
@@ -39,4 +35,4 @@ jobs:
           ./pdf-markdown/generate.sh
 
       - name: Sync PDFs
-        run: aws s3 sync md-generated/. s3://cdn.afetbilgi.com/md-pdf/TEST
+        run: aws s3 sync md-generated/. s3://cdn.afetbilgi.com/md-pdf
