--- a/fe/package.json
+++ b/fe/package.json
@@ -7,7 +7,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "datagen": "./../data/local_data_gen.sh; REACT_APP_TEST_DATA=1 react-scripts start"
   },
   "dependencies": {
     "@emotion/cache": "^11.7.1",
