--- a/maps/package.json
+++ b/maps/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.2.7",
     "@mui/system": "^5.11.8",
     "axios": "^1.3.2",
+    "fuse.js": "^6.6.2",
     "i18next": "^22.4.9",
     "leaflet": "^1.9.3",
     "material-react-toastify": "1.0.1",
@@ -29,8 +30,7 @@
     "react-leaflet": "^4.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.0",
-    "slugify": "^1.6.5"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.0",
