Fix: index.json dont have Turkish chars

--- a/.github/workflows/pdf-generate-upload-markdown.yaml
+++ b/.github/workflows/pdf-generate-upload-markdown.yaml
@@ -1,6 +1,10 @@
 name: PDF upload with Markdown (cronjob)
 
 on:
+  push:
+    branches:
+      - ozansz/pdf-gen-index-fix
+      
   workflow_dispatch:
 
   schedule:
