--- a/.github/workflows/pdf-generate-upload-markdown.yaml
+++ b/.github/workflows/pdf-generate-upload-markdown.yaml
@@ -42,6 +42,7 @@ jobs:
         with:
             cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
             cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
-            prefixes: |
+            hosts: |
               pdf.afetbilgi.com
+            prefixes: |
               cdn.afetbilgi.com/md-pdf
