--- a/.github/workflows/pdf-generate-upload-markdown.yaml
+++ b/.github/workflows/pdf-generate-upload-markdown.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16  
+          node-version: 16
           # cache: 'npm'
 
       - name: Generate Markdowns and PDFs
@@ -40,9 +40,8 @@ jobs:
       - name: Purge cache
         uses: nathanvaughn/actions-cloudflare-purge@master
         with:
-            cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
-            cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
-            hosts: |
-              pdf.afetbilgi.com
-            prefixes: |
-              cdn.afetbilgi.com/md-pdf
+          cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
+          cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
+          hosts: |
+            pdf.afetbilgi.com
+            cdn.afetbilgi.com
