--- a/.github/workflows/map-data-upload.yaml
+++ b/.github/workflows/map-data-upload.yaml
@@ -2,9 +2,6 @@ name: Map data upload (cronjob)
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - yigit/map-hospitals
 
   schedule:
     # * is a special character in YAML so you have to quote this string
@@ -39,4 +36,4 @@ jobs:
           gzip -9 -c ./to_upload/latest.json > "./to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/maps-yigit
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/maps
