--- a/.github/workflows/pdf-generate-upload-markdown.yaml
+++ b/.github/workflows/pdf-generate-upload-markdown.yaml
@@ -37,11 +37,11 @@ jobs:
       - name: Sync PDFs
         run: aws s3 sync md-generated/. s3://cdn.afetbilgi.com/md-pdf
 
-      - name: Purge cache
-        uses: nathanvaughn/actions-cloudflare-purge@master
-        with:
-          cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
-          cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
-          hosts: |
-            pdf.afetbilgi.com
-            cdn.afetbilgi.com
+      # - name: Purge cache
+      #   uses: nathanvaughn/actions-cloudflare-purge@master
+      #   with:
+      #     cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
+      #     cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
+      #     hosts: |
+      #       pdf.afetbilgi.com
+      #       cdn.afetbilgi.com
