--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -62,7 +62,12 @@ jobs:
       - name: Merge datasets
         run: |
           python ./data/combine.py ./data/latest_datasets > ./data/to_upload/latest.json
-          gzip -9 -c ./data/to_upload/latest.json > "./data/to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
+
+          curl -O https://s3.eu-central-1.amazonaws.com/cdn.afetbilgi.com/schema.json
+          python data/integrity_validator.py validate schema.json ./data/to_upload/latest.json
+
+          mkdir ./data/to_upload/datasets
+          gzip -9 -c ./data/to_upload/latest.json > "./data/to_upload/datasets/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/furkand
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
