--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -55,6 +55,7 @@ jobs:
           cp ../datasets/twitter_account.json ../latest_datasets/twitter_account.json
           cp ../datasets/blood.json ../latest_datasets/blood.json
           cp ../datasets/donation_links.json ../latest_datasets/donation_links.json
+          cp ../datasets/mobil_tuvalet.json ../latest_datasets/mobil_tuvalet.json
 
       - name: Merge datasets
         run: |
