--- a/.github/workflows/http-health-check.yaml
+++ b/.github/workflows/http-health-check.yaml
@@ -16,5 +16,5 @@ jobs:
       - name: Checking HTTP status codes are valid
         uses: lakuapik/gh-actions-http-status@v1
         with:
-          sites: '["https://afetbilgi.com", "https://www.afetbilgi.com", "https://maps.afetbilgi.com", "https://cdn.afetbilgi.com/latest.json","https://cdn.afetbilgi.com/schema.json", "https://pdf.afetbilgi.com", "https://pdf.afetbilgi.com/index.json"]'
-          expected: '[308, 200, 304, 302]'
+          sites: '["https://afetbilgi.com", "https://www.afetbilgi.com", "https://maps.afetbilgi.com", "https://cdn.afetbilgi.com/latest.json","https://cdn.afetbilgi.com/schema.json", "https://pdf.afetbilgi.com", "https://pdf.afetbilgi.com/index.json", "https://cdn.afetbilgi.com/md-pdf/index.json"]'
+          expected: '[308, 200, 200, 200, 200, 302, 302, 200]'
