--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -50,6 +50,7 @@ jobs:
           python ./ulasim_parser.py ../latest_datasets/ulasim.json
           python ./hastane.py ../latest_datasets/hastane.json
           python ./akaryakit.py ../latest_datasets/akaryakit.json
+          python3 ./eczane_local.py ../latest_datasets/eczane_local.json
 
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/blood.json ../latest_datasets/blood.json
