--- a/.github/workflows/external-map-data-upload.yml
+++ b/.github/workflows/external-map-data-upload.yml
@@ -2,6 +2,9 @@ name: External Map data upload
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - feat/external-markers
 
 jobs:
   deploy:
