add Digital Solidarity Campaigns

--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -51,6 +51,7 @@ jobs:
           python ./hastane.py ../latest_datasets/hastane.json
           python ./akaryakit.py ../latest_datasets/akaryakit.json
           python3 ./eczane_local.py ../latest_datasets/eczane_local.json
+          python3 ./digital_platforms.py ../latest_datasets/digital_platforms.json
 
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/blood.json ../latest_datasets/blood.json
