--- a/.github/workflows/map-data-upload.yaml
+++ b/.github/workflows/map-data-upload.yaml
@@ -28,12 +28,11 @@ jobs:
       - run: pip install -r requirements.txt
 
       - name: Run parsers
-        run: |
-          cd data
-          mkdir to_upload
+        run: python data/map-parsers/all_parser.py ./latest.json
 
-          python map-parsers/all_parser.py ./to_upload/latest.json
-          gzip -9 -c ./to_upload/latest.json > "./to_upload/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
+      - name: Backup
+        run: |
+          aws s3 cp ./latest.json "s3://afetbilgi-backup/map-datasets/`date +%Y-%m-%d_%H-%M-%S`.json"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/maps
+        run: aws s3 cp ./latest.json s3://cdn.afetbilgi.com/maps
