--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -1,10 +1,6 @@
 name: Data upload (cronjob)
 
 on:
-  push:
-    branches:
-      - ozansz/use-backup-bucket-in-wfs
-
   workflow_dispatch:
 
   schedule:
@@ -75,9 +71,8 @@ jobs:
 
       - name: Sync JSON files
         run: |
-          ### TODO: Change
-          aws s3 cp ./schema.json s3://cdn.afetbilgi.com/sazak
-          aws s3 cp ./latest.json s3://cdn.afetbilgi.com/sazak
+          aws s3 cp ./schema.json s3://cdn.afetbilgi.com
+          aws s3 cp ./latest.json s3://cdn.afetbilgi.com
 
       - name: Purge cache
         uses: nathanvaughn/actions-cloudflare-purge@master
