add new PDF data parsers

--- a/.github/workflows/pdf-generate-upload-markdown.yaml
+++ b/.github/workflows/pdf-generate-upload-markdown.yaml
@@ -1,6 +1,10 @@
 name: PDF upload with Markdown (cronjob)
 
 on:
+  push:
+    branches:
+      - ozansz/enhance_pdf_gen
+      
   workflow_dispatch:
 
   schedule:
